src/SearchBar/SearchBar.scss
.search {
  position: relative;
  display: flex;
  align-items: center;
  border: 1px solid rgba(0, 0, 0, 0.5);
  border-radius: 8px;
  padding: 0 16px;

  &:focus-within {
    border: 1px solid $accent-color;
    box-shadow: 0 0 5px $secondary-color;
  }

  &__icon {
    margin-right: 8px;
    color: rgba(0, 0, 0, 0.54);
  }

  &__clear-button {
    @extend %btn, %btn-accent;
    margin-left: 20px;
    font-size: 16px;
    aspect-ratio: 1/1;
    border-radius: 9999px;
    justify-content: center;
  }

  &__input {
    width: 100%;
    border: none;
    padding: 15px 0;
    font-size: 16px;
    line-height: 1.5;

    &:focus {
      outline: none;
    }
  }
}

